# Cybersomething

./: Cargo.toml  README.md
crates/api/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/math/: hydrology.rs  mod.rs  risk_index.rs  routing.rs
crates/core/src/math/utils/: constants.rs  mod.rs
crates/core/src/models/: ecology.rs  energy.rs  geospatial.rs  hardware.rs  mod.rs
crates/core/src/utils/: errors.rs
crates/geospatial/: Cargo.toml
crates/geospatial/src/: grid.rs  lib.rs  projection.rs  raster.rs  vector.rs
crates/neuromorphic/: Cargo.toml
crates/neuromorphic/src/: lib.rs
crates/neuromorphic/src/learning/: mod.rs  reward.rs  stdp.rs
crates/neuromorphic/src/snn/: layer.rs  mod.rs  neuron.rs  synapse.rs
crates/neuromorphic/src/swarm/: agent.rs  collective.rs  decision.rs  mod.rs
crates/sim/src/: engine.rs
docs/: MATH.md
