[package]
name = "cybersomething-geospatial"
version = "0.1.0"
edition = "2021"
description = "Geospatial data structures, spatial indexing, and geographic operations"
license = "Apache-2.0"

[dependencies]
cybersomething-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
ndarray = "0.15"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"
