[package]
name = "cybersomething-neuromorphic"
version = "0.1.0"
edition = "2021"
description = "Neuromorphic spiking neural networks and swarm intelligence for ecological decision-making"
license = "Apache-2.0"

[dependencies]
cybersomething-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
ndarray = "0.15"

[dev-dependencies]
criterion = "0.5"
